[package]
name = "myco_client_rust"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "myco_client_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde", "rustc-serialize"]}
clap = "2"
clap-nested = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
text-colorizer = "1"
tokio = { version = "*", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }

[dependencies.redis]
git = "https://github.com/mitsuhiko/redis-rs.git"
