[package]
name = "myco_client_rust"
version = "0.1.0"
authors = ["Grid Singularity <info@gridsingularity.com>"]
description = "Matching engine (Myco) client for the Grid Singularity Energy Exchange"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "myco_client_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"]}
clap = { version = "3", features = ["derive"]}
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
futures = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
subxt = "0.20"
text-colorizer = "1"
tokio = { version = "*", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }

[dependencies.redis]
git = "https://github.com/mitsuhiko/redis-rs.git"
